chores: sonar fixes